--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 db:
   image: mysql:latest
+  command: --default-authentication-plugin=mysql_native_password
   environment:
     MYSQL_ROOT_PASSWORD: password
-    MYSQL_DATABASE: blood_bank
-    MYSQL_USER: blood_bank_user
-    MYSQL_PASSWORD: blood_bank_password
+    MYSQL_DATABASE: Bookstore
+    MYSQL_USER : user
+    MYSQL_PASSWORD: pass
   ports:
     - "32795:3306"
   container_name: mysql_container
